# sdk-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/sidearm/: __init__.py  _client.py  _job.py  _types.py
src/sidearm/resources/: __init__.py  algorithms.py  billing.py  detect.py  extract.py  jobs.py  media.py  protect.py  rights.py  run.py  search.py  shares.py
