[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidearmdrm"
version = "0.6.0"
description = "Python SDK for the Sidearm API — protect media from AI training, detect AI content, and search for stolen work"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Sidearm", email = "hello@sdrm.io" }]
keywords = [
    "sidearm",
    "sdrm",
    "media-protection",
    "watermark",
    "ai-detection",
    "content-credentials",
    "adversarial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://sdrm.io"
Documentation = "https://sdrm.io/docs"
Repository = "https://github.com/sidearmDRM/sdk-python"
Issues = "https://github.com/sidearmDRM/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sidearm"]
